# beepboop.nvim

./: .gitignore  Makefile  README.md  build.zig  meson.build  run_tests.sh  test.lua
.cache/clangd/index/: boopbeep.cpp.1685FE87639C1913.idx
lua/: old.lua
lua/beepboop/: api.lua  commands.lua  companion.lua  config.lua  health.lua  init.lua  old.lua  state.lua  theme.lua  trigger.lua  utils.lua  validate.lua
plugin/: beepboop.nvim
src/: boopbeep.cpp  boopbeep.zig
test/boopbeep/: boopbeeptest.lua
